--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             <h1 class="display-2">BatMailer</h1>
             <p class="lead">Send mails in the Batman style.</p>
             <hr style="width:30%; border-bottom:1px solid white;">
-            <div class="mt-5 pt-2">
+            <div class="mt-5 py-2">
                 <input id="to" type="email" placeholder="Email of the Recipient.." class="form-control transparent-input">
                 <br>
                 <input id="subject" type="text" placeholder="Subject.." class="form-control transparent-input">
