--- a/public/change.html
+++ b/public/change.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BatMailer | Change Email</title>
+    <link rel="icon" href="images/favicon.ico">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"> </head>
 
